--- a/partials/contents/_consulEstadoPagos.html
+++ b/partials/contents/_consulEstadoPagos.html
@@ -77,57 +77,18 @@
                 </div>
 
                 
-                <a class="nav-link dropdown-toggle" href="https://bootstrapthemes.co" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown link
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <li><a class="dropdown-item" href="#">Action</a></li>
-                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                    <li><a class="dropdown-item dropdown-toggle" href="#">Submenu</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Submenu action</a></li>
-                            <li><a class="dropdown-item" href="#">Another submenu action</a></li>
-
-
-                            <li><a class="dropdown-item dropdown-toggle" href="#">Subsubmenu</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Subsubmenu action aa</a></li>
-                                    <li><a class="dropdown-item" href="#">Another subsubmenu action</a></li>
-                                </ul>
-                            </li>
-                            <li><a class="dropdown-item dropdown-toggle" href="#">Second subsubmenu</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Subsubmenu action bb</a></li>
-                                    <li><a class="dropdown-item" href="#">Another subsubmenu action</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                    <li><a class="dropdown-item dropdown-toggle" href="#">Submenu 2</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Submenu action 2</a></li>
-                            <li><a class="dropdown-item" href="#">Another submenu action 2</a></li>
-
-
-                            <li><a class="dropdown-item dropdown-toggle" href="#">Subsubmenu</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Subsubmenu action 1 3</a></li>
-                                    <li><a class="dropdown-item" href="#">Another subsubmenu action 2 3</a></li>
-                                </ul>
-                            </li>
-                            <li><a class="dropdown-item dropdown-toggle" href="#">Second subsubmenu 3</a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Subsubmenu action 3 </a></li>
-                                    <li><a class="dropdown-item" href="#">Another subsubmenu action 3</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </li>
-                </ul>
-            
-               
+                
+                
             </div>
+            <div class="container">
+                <div class="row justify-content-md-center ">
+                    <div class="justify-content-between col-6 text  -center">
 
+                        <button type="button" class="btn btn-outline-primary btn-fw col-5">Buscar</button>
+                        <button type="button" class="btn btn-outline-primary btn-fw col-5">Limpiar</button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
