--- a/partials/contents/_consulEstadoPagos.html
+++ b/partials/contents/_consulEstadoPagos.html
@@ -30,65 +30,67 @@
 </div>
 
 <!-- page information -->
+<form action="">
 
-<div class="col-12 grid-margin stretch-card">
-    <div class="card">
-        <div class="card-body">
-            <div class="row">
-                <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
-                    <label for="SelectTower" class="col-sm-5 col-form-label">Torre</label>
-                    <select class="form-control col-sm-5 d-inline" id="SelectTower">
-                        <option>Torre 1</option>
-                        <option>Torre 2</option>
-                    </select>
-                </div>
-                <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
-                    <label for="SelectTower" class="col-sm-5 col-form-label">Fecha inicial</label>
-                    <input type="date" class="col-sm-6"/>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
-                    <label for="SelectTower" class="col-sm-5 col-form-label">Apartamento</label>
-                    <select class="form-control col-sm-5 d-inline" id="SelectTower">
-                        <option>Apartamento 101</option>
-                        <option>Apartamento 102</option>
-                    </select>
-                </div>
-                <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
-                    <label for="SelectTower" class="col-sm-5 col-form-label">Fecha Final</label>
-                    <input type="date" class="col-sm-6"/>
-                </div>
-            </div>
-
-            <div class="row">
-                <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
-                    <label for="SelectTower" class="col-sm-5 col-form-label">Tipo de pago</label>
-                    <select class="form-control col-sm-5 d-inline" id="SelectTower">
-                        <option>Administración</option>
-                        <option>Cuotas Extraordinarias</option>
-                        <option>Multas</option>
-                        <option>Parqueadero</option>
-                        <option>Acuerdo de pago</option>
-                        <option>Reserva Zona Común</option>
-
-                    </select>
-                </div>
-
-                
-                
-                
-            </div>
-            <div class="container">
-                <div class="row justify-content-md-center ">
-                    <div class="justify-content-between col-6 text  -center">
-
-                        <button type="button" class="btn btn-outline-primary btn-fw col-5">Buscar</button>
-                        <button type="button" class="btn btn-outline-primary btn-fw col-5">Limpiar</button>
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <div class="row">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Torre</label>
+                        <select class="form-control col-sm-5 d-inline" id="SelectTower">
+                            <option>Torre 1</option>
+                            <option>Torre 2</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Fecha inicial</label>
+                        <input type="date" class="col-sm-6" />
                     </div>
                 </div>
+
+                <div class="row">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Apartamento</label>
+                        <select class="form-control col-sm-5 d-inline" id="SelectTower">
+                            <option>Apartamento 101</option>
+                            <option>Apartamento 102</option>
+                        </select>
+                    </div>
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Fecha Final</label>
+                        <input type="date" class="col-sm-6" />
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Tipo de pago</label>
+                        <select class="form-control col-sm-5 d-inline" id="SelectTower">
+                            <option>Administración</option>
+                            <option>Cuotas Extraordinarias</option>
+                            <option>Multas</option>
+                            <option>Parqueadero</option>
+                            <option>Acuerdo de pago</option>
+                            <option>Reserva Zona Común</option>
+
+                        </select>
+                    </div>
+
+
+
+
+                </div>
+                <div class="container">
+                    <div class="row justify-content-md-center ">
+                        <div class="justify-content-between-center col-6 text-center  ">
+                            <button type="button" class="btn btn-outline-primary btn-fw col-5">Buscar</button>
+                            <button type="reset" class="btn btn-outline-primary btn-fw col-5">Limpiar</button>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
     </div>
-</div>
+</form>
