--- a/partials/contents/_crearAcuerdosPagos.html
+++ b/partials/contents/_crearAcuerdosPagos.html
@@ -1,1 +1,89 @@
-<h1>Crear acuerdos de Pagos</h1>
+<div class="row">
+    <div class="col-md-12 grid-margin">
+        <div class="d-flex justify-content-between flex-wrap">
+            <div class="d-flex align-items-end flex-wrap">
+                <div class="mr-md-3 mr-xl-5">
+                    <td id="contentPage"></td>
+                    <h2>Crear acuerdos de pagos</h2>
+                    <p class="mb-md-0">Your analytics dashboard template.</p>
+                </div>
+                <div class="d-flex">
+                    <i class="mdi mdi-home text-muted hover-cursor"></i>
+                    <p class="text-muted mb-0 hover-cursor">Dashboard</p>
+                    <p class="text-primary mb-0 hover-cursor">Analytics</p>
+                </div>
+            </div>
+            <div class="d-flex justify-content-between align-items-end flex-wrap">
+                <button type="button" class="btn btn-light bg-white btn-icon mr-3 d-none d-md-block ">
+                    <i class="mdi mdi-download text-muted"></i>
+                </button>
+                <button type="button" class="btn btn-light bg-white btn-icon mr-3 mt-2 mt-xl-0">
+                    <i class="mdi mdi-clock-outline text-muted"></i>
+                </button>
+                <button type="button" class="btn btn-light bg-white btn-icon mr-3 mt-2 mt-xl-0">
+                    <i class="mdi mdi-plus text-muted"></i>
+                </button>
+                <button class="btn btn-primary mt-2 mt-xl-0">Generate report</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- page information -->
+<form action="">
+
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Torre</label>
+                        <select class="form-control col-sm-5 d-inline" id="SelectTower">
+                            <option>Torre 1</option>
+                            <option>Torre 2</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Apartamento</label>
+                        <select class="form-control col-sm-5 d-inline" id="SelectTower">
+                            <option>Apartamento 101</option>
+                            <option>Apartamento 102</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Total deuda</label>
+                        <input type="number" class="form-control" id="exampleInputName1" placeholder="Total deuda">
+                    </div>
+                </div>
+
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Número de cuotas a diferir</label>
+                        <input type="number" class="form-control" id="exampleInputName1"
+                            placeholder="Cantidad de cuotas">
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="row justify-content-md-center ">
+                        <div class="justify-content-between-center col-6 text-center  ">
+                            <button type="button" class="btn btn-outline-primary btn-fw col-5">
+                                Guardar
+                            </button>
+                            <button type="button" class="btn btn-outline-primary btn-fw col-5">
+                                Cancelar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+</form>
