crearCuotasExtraordinaria crearMultas and editarMultas pages

--- a/partials/contents/_crearMultas.html
+++ b/partials/contents/_crearMultas.html
@@ -1,1 +1,128 @@
-<h1>Crear Multas</h1>
+<div class="row">
+    <div class="col-md-12 grid-margin">
+        <div class="d-flex justify-content-between flex-wrap">
+            <div class="d-flex align-items-end flex-wrap">
+                <div class="mr-md-3 mr-xl-5">
+                    <td id="contentPage"></td>
+                    <h2>Crear Multas</h2>
+                    <p class="mb-md-0">Your analytics dashboard template.</p>
+                </div>
+                <div class="d-flex">
+                    <i class="mdi mdi-home text-muted hover-cursor"></i>
+                    <p class="text-muted mb-0 hover-cursor">Dashboard</p>
+                    <p class="text-primary mb-0 hover-cursor">Analytics</p>
+                </div>
+            </div>
+            <div class="d-flex justify-content-between align-items-end flex-wrap">
+                <button type="button" class="btn btn-light bg-white btn-icon mr-3 d-none d-md-block ">
+                    <i class="mdi mdi-download text-muted"></i>
+                </button>
+                <button type="button" class="btn btn-light bg-white btn-icon mr-3 mt-2 mt-xl-0">
+                    <i class="mdi mdi-clock-outline text-muted"></i>
+                </button>
+                <button type="button" class="btn btn-light bg-white btn-icon mr-3 mt-2 mt-xl-0">
+                    <i class="mdi mdi-plus text-muted"></i>
+                </button>
+                <button class="btn btn-primary mt-2 mt-xl-0">Generate report</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- page information -->
+<form action="">
+
+    <div class="col-12 grid-margin stretch-card">
+        <div class="card">
+            <div class="card-body">
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Torre</label>
+                        <select class="form-control col-sm-5 d-inline" id="SelectTower">
+                            <option>Torre 1</option>
+                            <option>Torre 2</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Apartamento</label>
+                        <select class="form-control col-sm-5 d-inline" id="SelectTower">
+                            <option>Apartamento 101</option>
+                            <option>Apartamento 102</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Concepto</label>
+                        <select class="form-control col-sm-5 d-inline" id="SelectTower">
+                            <option>Inasistencia Asamblea</option>
+                            <option>Arrojar basura en lugares no establecidos</option>
+                        </select>
+                    </div>
+                </div>
+
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Descripción de los hechos</label>
+                        <textarea name="" id="" cols="30" rows="10"></textarea>
+                    </div>
+                </div>
+
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Valor</label>
+                        <div class="form-group col-md-4 grid-margin stretch-card pl-0">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-primary text-white">$</span>
+                            </div>
+                            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                            <div class="input-group-append">
+                                <span class="input-group-text">.00</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Fecha limite de pago</label>
+                        <input type="date" class="col-sm-6" />
+                    </div>
+                </div>
+
+                <div class="row justify-content-md-center">
+                    <div class="form-group col-md-6 col-xl-6 grid-margin stretch-card">
+                        <label for="SelectTower" class="col-sm-5 col-form-label">Porcentaje intereses de mora</label>
+                        <div class="form-group col-md-4 grid-margin stretch-card pl-0">
+                            <div class="input-group-prepend">
+                                <span class="input-group-text bg-primary text-white">$</span>
+                            </div>
+                            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
+                            <div class="input-group-append">
+                                <span class="input-group-text">%</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="row justify-content-md-center ">
+                        <div class="justify-content-between-center col-6 text-center  ">
+                            <button type="button" class="btn btn-outline-primary btn-fw col-5">
+                                Guardar
+                            </button>
+                            <button type="button" class="btn btn-outline-primary btn-fw col-5">
+                                Cancelar
+                            </button>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
+</form>
