--- a/partials/contents/_crearCuotaExtraordinaria.html
+++ b/partials/contents/_crearCuotaExtraordinaria.html
@@ -77,7 +77,7 @@
                         <label for="SelectTower" class="col-sm-5 col-form-label">Porcentaje intereses de mora</label>
                         <div class="form-group col-md-4 grid-margin stretch-card pl-0">
                             <div class="input-group-prepend">
-                                <span class="input-group-text bg-primary text-white">$</span>
+                                <span class="input-group-text bg-primary text-white">%</span>
                             </div>
                             <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)">
                             <div class="input-group-append">
