--- a/partials/contents/_editarAcuerdosPagos.html
+++ b/partials/contents/_editarAcuerdosPagos.html
@@ -4,7 +4,7 @@
             <div class="d-flex align-items-end flex-wrap">
                 <div class="mr-md-3 mr-xl-5">
                     <td id="contentPage"></td>
-                    <h2>Crear acuerdos de pagos</h2>
+                    <h2>Editatr acuerdos de pagos</h2>
                     <p class="mb-md-0">Your analytics dashboard template.</p>
                 </div>
                 <div class="d-flex">
